# MotionTracking

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
src/motion_tracking/: camera.py  drawing.py  main.py  modes.py  sidebar.py  tracker.py
tests/: test_camera.py
