[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motion-tracking"
version = "0.1.0"
description = "Real-time pose estimation and motion tracking using MediaPipe and OpenCV"
requires-python = ">=3.10"

[project.scripts]
motion-tracking = "motion_tracking.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
